examples/test/testpolicy1435.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1435
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key36: value12
      key22: value20
      key29: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value14
          key47: value49
      podSelector:
        matchLabels:
          key42: value29
          key11: value33
